alignment fix

--- a/wp-content/themes/special/src/css/shame.css
+++ b/wp-content/themes/special/src/css/shame.css
@@ -176,6 +176,14 @@ main > article > div > footer span {
   display: inline-block;
 }
 
+@supports (display: grid) {
+  @media only screen and (min-width: 48em) {
+    .post-navigation {
+      grid-column: 2 / 5;
+    }
+  }
+}
+
 .post-navigation .nav-links {
   display: flex;
   flex-wrap: wrap;
